--- a/_source/LigaCancer/Views/Shared/_LayoutBaseAdmin.cshtml
+++ b/_source/LigaCancer/Views/Shared/_LayoutBaseAdmin.cshtml
@@ -2,6 +2,16 @@
 
 <html lang="pt-br">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142367311-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-142367311-1');
+    </script>
+
     <base href="./">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
