--- a/_source/LigaCancer/Areas/Admin/Views/Patient/Partials/_PatientInformation.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/Patient/Partials/_PatientInformation.cshtml
@@ -3,46 +3,51 @@
 <div class="modal-body">
     <div class="form-row">
         <div class="form-group col-lg-12">
+            <label asp-for="TreatmentbeginDate" class="control-label label-required"></label>
+            <input asp-for="TreatmentbeginDate" readonly type="text" class="form-control dateField" />
+            <span asp-validation-for="TreatmentbeginDate" class="text-danger"></span>
+        </div>
+        <div class="form-group col-lg-12">
             <label asp-for="CancerTypes" class="control-label"></label>
             <select asp-for="CancerTypes" asp-items="Model.SelectCancerTypes" class="form-control patientInformationSelect" style="width: 100%"
-                    data-theme="bootstrap" 
-                    data-language="pt-BR" 
-                    data-placeholder="Cânceres" 
+                    data-theme="bootstrap"
+                    data-language="pt-BR"
+                    data-placeholder="Cânceres"
                     data-width="resolve"
-                    data-tags="true" 
+                    data-tags="true"
                     data-allow-clear="true"></select>
             <span asp-validation-for="CancerTypes" class="text-danger"></span>
         </div>
         <div class="form-group col-md-12">
             <label asp-for="Medicines" class="control-label"></label>
             <select asp-for="Medicines" asp-items="Model.SelectMedicines" class="form-control patientInformationSelect" style="width: 100%"
-                    data-theme="bootstrap" 
-                    data-language="pt-BR" 
-                    data-placeholder="Remédios" 
+                    data-theme="bootstrap"
+                    data-language="pt-BR"
+                    data-placeholder="Remédios"
                     data-width="resolve"
-                    data-tags="true" 
+                    data-tags="true"
                     data-allow-clear="true"></select>
             <span asp-validation-for="Medicines" class="text-danger"></span>
         </div>
         <div class="form-group col-md-12">
             <label asp-for="Doctors" class="control-label"></label>
             <select asp-for="Doctors" asp-items="Model.SelectDoctors" class="form-control patientInformationSelect" style="width: 100%"
-                    data-theme="bootstrap" 
-                    data-language="pt-BR" 
-                    data-placeholder="Médicos" 
+                    data-theme="bootstrap"
+                    data-language="pt-BR"
+                    data-placeholder="Médicos"
                     data-width="resolve"
-                    data-tags="true" 
+                    data-tags="true"
                     data-allow-clear="true"></select>
             <span asp-validation-for="Doctors" class="text-danger"></span>
         </div>
         <div class="form-group col-lg-12">
             <label asp-for="TreatmentPlaces" class="control-label"></label>
             <select asp-for="TreatmentPlaces" asp-items="Model.SelectTreatmentPlaces" class="form-control patientInformationSelect" style="width: 100%"
-                    data-theme="bootstrap" 
-                    data-language="pt-BR" 
-                    data-placeholder="Locais de Tratamento" 
+                    data-theme="bootstrap"
+                    data-language="pt-BR"
+                    data-placeholder="Locais de Tratamento"
                     data-width="resolve"
-                    data-tags="true" 
+                    data-tags="true"
                     data-allow-clear="true"></select>
             <span asp-validation-for="TreatmentPlaces" class="text-danger"></span>
         </div>
