--- a/_source/LigaCancer/Areas/Admin/Views/FamilyMember/Partials/_EditFamilyMember.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/FamilyMember/Partials/_EditFamilyMember.cshtml
@@ -22,7 +22,7 @@
         </div>
         <div class="form-group">
             <label asp-for="DateOfBirth" class="control-label"></label>
-            <input asp-for="DateOfBirth" readonly type="text" class="form-control" id="dateOfBirth" />
+            <input asp-for="DateOfBirth" type="text" class="form-control" id="dateOfBirth" />
             <span asp-validation-for="DateOfBirth" class="text-danger"></span>
         </div>
         <div class="form-group">
