--- a/_source/LigaCancer/Areas/Admin/Views/Home/Index.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
                         <form class="col-sm-6 form-group row" id="searchForm" method="post">
                             <label class="col-md-3 mt-1" asp-for="ChartDate"></label>
                             <div class="col-md-9">
-                                <input asp-for="ChartDate" readonly type="text" class="form-control dateField" />
+                                <input asp-for="ChartDate" type="text" class="form-control" />
                                 <span asp-validation-for="ChartDate" class="text-danger"></span>
                             </div>
                         </form>
@@ -98,10 +98,12 @@
 </main>
 
 @section scripts {
+    <partial name="_ValidationScriptsPartial" />
     <environment names="Development">
         <script src="~/lib/chart-js/Chart.min.js"></script>
         <script src="~/lib/gijgo/combined/js/gijgo.min.js"></script>
         <script src="~/lib/gijgo/combined/js/messages/messages.pt-br.min.js"></script>
+        <script src="~/lib/jquery-mask/jquery.mask.min.js"></script>
         <script src="~/js/admin/home.js"></script>
     </environment>
     <environment exclude="Development">
