--- a/_source/LigaCancer/Areas/Admin/Views/Patient/Partials/_ArchivePatient.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/Patient/Partials/_ArchivePatient.cshtml
@@ -23,8 +23,8 @@
         </div>
         <div class="form-group">
             <label asp-for="DateTime" class="control-label"></label>
-            <input asp-for="DateTime" readonly type="text" asp-format="" class="form-control dateField" />
-            <span asp-validation-for="DateTime"></span>
+            <input asp-for="DateTime" type="text" asp-format="" class="form-control" />
+            <span asp-validation-for="DateTime" class="text-danger"></span>
         </div>
     </div>
     
