--- a/_source/LigaCancer/Areas/Admin/Views/Patient/Partials/_PatientInformation.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/Patient/Partials/_PatientInformation.cshtml
@@ -4,7 +4,7 @@
     <div class="form-row">
         <div class="form-group col-lg-12">
             <label asp-for="TreatmentbeginDate" class="control-label label-required"></label>
-            <input asp-for="TreatmentbeginDate" readonly type="text" class="form-control dateField" />
+            <input asp-for="TreatmentbeginDate" type="text" class="form-control" />
             <span asp-validation-for="TreatmentbeginDate" class="text-danger"></span>
         </div>
         <div class="form-group col-lg-12">
