--- a/_source/LigaCancer/Areas/Admin/Views/Patient/Partials/_PatientProfile.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/Patient/Partials/_PatientProfile.cshtml
@@ -63,7 +63,7 @@
         </div>
         <div class="form-group col-md-6">
             <label asp-for="DateOfBirth" class="control-label label-required"></label>
-            <input asp-for="DateOfBirth" readonly type="text" class="form-control dateField"/>
+            <input asp-for="DateOfBirth" type="text" class="form-control"/>
             <span asp-validation-for="DateOfBirth" class="text-danger"></span>
         </div>
         <div class="form-group col-md-6 pt-4">
