--- a/_source/LigaCancer/Areas/Admin/Views/Presence/Index.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/Presence/Index.cshtml
@@ -51,12 +51,12 @@
                                         </div>
                                         <div class="col-lg-3">
                                             <label asp-for="DateFrom"></label>
-                                            <input asp-for="DateFrom" readonly type="text" class="form-control dateField" />
+                                            <input asp-for="DateFrom" type="text" class="form-control" />
                                             <span asp-validation-for="DateFrom" class="text-danger"></span>
                                         </div>
                                         <div class="col-lg-3">
                                             <label asp-for="DateTo"></label>
-                                            <input asp-for="DateTo" readonly type="text" class="form-control dateField" />
+                                            <input asp-for="DateTo" type="text" class="form-control" />
                                             <span asp-validation-for="DateTo" class="text-danger"></span>
                                         </div>
                                     </div>
@@ -117,6 +117,7 @@
         <script src="~/lib/pdfmake/pdfmake.min.js"></script>
         <script src="~/lib/pdfmake/vfs_fonts.js"></script>
         <script src="~/lib/datatables-buttons/js/buttons.html5.min.js"></script>*@
+        <script src="~/lib/jquery-mask/jquery.mask.min.js"></script>
         <script src="~/js/admin/presence.js"></script>
     </environment>
     <environment exclude="Development">
