--- a/_source/LigaCancer/Areas/Admin/Views/Presence/Partials/_AddPresence.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/Presence/Partials/_AddPresence.cshtml
@@ -22,7 +22,7 @@
         </div>
         <div class="form-group">
             <label asp-for="Date" class="control-label label-required"></label>
-            <input asp-for="Date" readonly type="text" class="form-control dateField"/>
+            <input asp-for="Date" type="text" class="form-control"/>
             <span asp-validation-for="Date" class="text-danger"></span>
         </div>
         <div class="form-group">
