--- a/_source/LigaCancer/Areas/Admin/Views/Presence/Index.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/Presence/Index.cshtml
@@ -61,13 +61,12 @@
                                         </div>
                                     </div>
                                     <div class="form-inline float-right">
-                                        <div class="form-group">
-                                            <div class="btn-group">
-                                                <button type="submit" class="btn btn-primary">
-                                                    <i class="fas fa-filter"></i> Filtrar
-                                                </button>
-                                            </div>
-                                        </div>
+                                        <button type="reset" class="btn btn-secondary mr-1">
+                                            <i class="fas fa-eraser"></i> Limpar
+                                        </button>
+                                        <button type="submit" class="btn btn-primary">
+                                            <i class="fas fa-filter"></i> Filtrar
+                                        </button>
                                     </div>
                                 </form>
                             </div>
