--- a/_source/LigaCancer/Views/Shared/_LayoutAdmin.cshtml
+++ b/_source/LigaCancer/Views/Shared/_LayoutAdmin.cshtml
@@ -57,7 +57,7 @@
             <nav class="sidebar-nav">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a asp-action="Index" asp-controller="Home" class="nav-link">
+                        <a asp-area="Admin" asp-action="Index" asp-controller="Home" class="nav-link">
                             <i class="nav-icon fas fa-tachometer-alt"></i> Home
                         </a>
                     </li>
