--- a/_source/LigaCancer/Views/Shared/_LayoutAdmin.cshtml
+++ b/_source/LigaCancer/Views/Shared/_LayoutAdmin.cshtml
@@ -63,12 +63,12 @@
                     </li>
                     <li class="nav-title">Pacientes</li>
                     <li class="nav-item">
-                        <a asp-action="Index" asp-controller="Patient" class="nav-link">
+                        <a asp-area="Admin" asp-action="Index" asp-controller="Patient" class="nav-link">
                             <i class="nav-icon fa fa-male"></i> Pacientes
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a asp-action="Index" asp-controller="Presence" class="nav-link">
+                        <a asp-area="Admin" asp-action="Index" asp-controller="Presence" class="nav-link">
                             <i class="nav-icon far fa-address-book"></i> Presenças
                         </a>
                     </li>
@@ -86,22 +86,22 @@
                         </li>*@
                     <li class="nav-title">Informações Médicas</li>
                     <li class="nav-item">
-                        <a asp-action="Index" asp-controller="Medicine" class="nav-link">
+                        <a asp-area="Admin" asp-action="Index" asp-controller="Medicine" class="nav-link">
                             <i class="nav-icon fa fa-capsules"></i> Remédios
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a asp-action="Index" asp-controller="CancerType" class="nav-link">
+                        <a asp-area="Admin" asp-action="Index" asp-controller="CancerType" class="nav-link">
                             <i class="nav-icon fa fa-notes-medical"></i> Cânceres
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a asp-action="Index" asp-controller="TreatmentPlace" class="nav-link">
+                        <a asp-area="Admin" asp-action="Index" asp-controller="TreatmentPlace" class="nav-link">
                             <i class="nav-icon fa fa-hospital-alt"></i> Locais de tratamento
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a asp-action="Index" asp-controller="Doctor" class="nav-link">
+                        <a asp-area="Admin" asp-action="Index" asp-controller="Doctor" class="nav-link">
                             <i class="nav-icon fa fa-user-md"></i> Médicos
                         </a>
                     </li>
@@ -120,7 +120,7 @@
                     {
                         <li class="nav-title">Administrativo</li>
                         <li class="nav-item">
-                            <a asp-action="Index" asp-controller="User" class="nav-link">
+                            <a asp-area="Admin" asp-action="Index" asp-controller="User" class="nav-link">
                                 <i class="nav-icon fa fa-users"></i> Usuários
                             </a>
                         </li>
