--- a/_source/LigaCancer/Views/Home/Index.cshtml
+++ b/_source/LigaCancer/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
                     <span class="icon-menu"></span>
                     <span class="icon-menu"></span>
                 </button>
-                <a href="index.html" class="navbar-brand"><img src="img/logo-oficial.png" alt=""></a>
+                <a href="index.html" class="navbar-brand"><img src="img/logo/logo-oficial.png" alt=""></a>
             </div>
             <div class="collapse navbar-collapse" id="main-navbar">
                 <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
