--- a/_source/LigaCancer/Views/Home/Index.cshtml
+++ b/_source/LigaCancer/Views/Home/Index.cshtml
@@ -16,8 +16,8 @@
                     <span class="icon-menu"></span>
                 </button>
                 @*<a href="/" class="navbar-brand" style="margin: 5% 0;">
-                    <img src="img/logo/logo-oficial.png" alt="">
-                </a>*@
+                        <img src="img/logo/logo-oficial.png" alt="">
+                    </a>*@
             </div>
             <div class="collapse navbar-collapse" id="main-navbar">
                 <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
@@ -69,7 +69,7 @@
             <div id="light-slider" class="carousel slide">
                 <div id="carousel-area">
                     <div id="carousel-slider" class="carousel slide" data-ride="carousel">
-                        <div class="carousel-inner" style="height: 100%"; role="listbox">
+                        <div class="carousel-inner" style="height: 100%" ; role="listbox">
                             <div class="carousel-item active">
                                 <img src="~/img/indice.png" alt="" style="height: 100%;">
                                 <div class="carousel-caption">
@@ -116,6 +116,40 @@
 </div>
 <!-- About Section End -->
 
+<section id="portfolio" class="section-padding" style="background: white !important">
+    <!-- Container Starts -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h2 class="section-title wow fadeInDown animated" data-wow-delay="0.3s">Camisetas</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 col-md-12">
+                <!-- Portfolio Controller/Buttons -->
+                <div class="controls text-center wow fadeInUpQuick" data-wow-delay=".6s">
+                    <p>A estampa da camiseta da RVCC deste ano, trás um ponto muito importante a ser comentado, que é importância do diagnóstico precoce do câncer infantojuvenil; intensificando a importância deste movimento representado pelo setembro dourado.</p>
+                    <p>Como mundialmente conhecido como símbolo de prevenção o laço dourado o azul e o rosa transmitem este sentido, juntos dentro de uma circunferência significando e dando jus a frase "unidos por essa causa".</p>
+                    <!-- Portfolio Controller/Buttons Ends-->
+                </div>
+
+                <!-- Portfolio Recent Projects -->
+                <div id="portfolio" class="row" data-wow-delay="0.8s" style="background: white !important">
+                    <div class="col-lg-12 col-md-12 col-xs-12 ">
+                        <div class="portfolio-item">
+                            <div class="portfolio-img">
+                                <img src="~/img/shirt.png" alt="" />
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Container Ends -->
+</section>
+<!-- Portfolio Section Ends -->
+
 <section id="portfolio" class="section-padding">
     <!-- Container Starts -->
     <div class="container">
@@ -128,41 +162,41 @@
             <div class="col-lg-12 col-md-12">
                 <!-- Portfolio Controller/Buttons -->
                 <div class="controls text-center wow fadeInUpQuick" data-wow-delay=".6s">
-                <p>Segue imagens sobre a construção da casa própria da rede videirense de combate ao cancêr</p>
-                <!-- Portfolio Controller/Buttons Ends-->
-            </div>
+                    <p>Segue imagens sobre a construção da casa própria da rede videirense de combate ao cancêr</p>
+                    <!-- Portfolio Controller/Buttons Ends-->
+                </div>
 
-            <!-- Portfolio Recent Projects -->
-            <div id="portfolio" class="row wow fadeInUpQuick" data-wow-delay="0.8s">
-                <div class="col-lg-4 col-md-6 col-xs-12 ">
-                    <div class="portfolio-item">
-                        <div class="portfolio-img">
-                            <img src="~/img/CASAAZULEROSA01.jpg" alt="" />
+                <!-- Portfolio Recent Projects -->
+                <div id="portfolio" class="row wow fadeInUpQuick" data-wow-delay="0.8s">
+                    <div class="col-lg-4 col-md-6 col-xs-12 ">
+                        <div class="portfolio-item">
+                            <div class="portfolio-img">
+                                <img src="~/img/CASAAZULEROSA01.jpg" alt="" />
+                            </div>
+
                         </div>
-                        
                     </div>
-                </div>
-                
-                <div class="col-lg-4 col-md-6 col-xs-12 ">
-                    <div class="portfolio-item">
-                        <div class="portfolio-img">
-                            <img src="~/img/CASAAZULEROSA03.jpg" alt="" />
+
+                    <div class="col-lg-4 col-md-6 col-xs-12 ">
+                        <div class="portfolio-item">
+                            <div class="portfolio-img">
+                                <img src="~/img/CASAAZULEROSA03.jpg" alt="" />
+                            </div>
+
                         </div>
-                        
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-xs-12 ">
-                    <div class="portfolio-item">
-                        <div class="portfolio-img">
-                            <img src="~/img/CASAAZULEROSA04.jpg" alt="" />
+                    <div class="col-lg-4 col-md-6 col-xs-12 ">
+                        <div class="portfolio-item">
+                            <div class="portfolio-img">
+                                <img src="~/img/CASAAZULEROSA04.jpg" alt="" />
+                            </div>
+
                         </div>
-                        
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Container Ends -->
+        <!-- Container Ends -->
 </section>
 <!-- Portfolio Section Ends -->
 
