--- a/_source/LigaCancer/Views/Home/Index.cshtml
+++ b/_source/LigaCancer/Views/Home/Index.cshtml
@@ -101,14 +101,19 @@
                 <div class="about block text-center">
                     <img src="img/outubro-rosa.jpg" alt="">
                     <h5><a href="#">Outubro Rosa</a></h5>
-                    <p>Campanha de conscientização que tem como objetivo principal alertar as mulheres e a sociedade sobre a importância da prevenção e do diagnóstico precoce do câncer de mama e mais recentemente sobre o câncer de colo do útero.</p>
+                    <p>
+                        Campanha de conscientização que tem como objetivo principal alertar as mulheres e a sociedade sobre a importância da prevenção e do diagnóstico precoce do câncer de mama
+                        e mais recentemente sobre o câncer de colo do útero.
+                    </p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-xs-12">
                 <div class="about block text-center">
                     <img src="~/img/novembro-azul.jpg" alt="">
                     <h5><a href="#">Novembro Azul</a></h5>
-                    <p>O câncer infantojuvenil é, em geral, mais curável do que o câncer em pessoas adultas. As células responsáveis pelo câncer juvenil são denominadas como “embrionárias”, estas células têm capacidade de dividir-se rapidamente e com isso, acabam respondendo melhor ao tratamento.</p>
+                    <p>
+                        Campanha de conscientização que tem como objetivo alertar os homens e a sociedade sobre a importância da prevenção e do diagnóstico precoce do câncer de próstata.
+                    </p>
                 </div>
             </div>
         </div>
