--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -60,65 +60,50 @@
                         </a>
                     </li>
 
-                    @if (!User.IsInRole(Roles.SocialAssistance))
-                    {
-                        <li class="nav-title">Benefícios</li>
-                        <li class="nav-item">
-                            <a asp-action="Index" asp-controller="PatientBenefit" class="nav-link">
-                                <span class="nav-icon fa fa-gift"></span> Benefícios
-                            </a>
-                        </li>
+                    <li class="nav-title">Benefícios</li>
+                    <li class="nav-item">
+                        <a asp-action="Index" asp-controller="PatientBenefit" class="nav-link">
+                            <span class="nav-icon fa fa-gift"></span> Benefícios
+                        </a>
+                    </li>
 
-                        <li class="nav-item">
-                            <a asp-action="Index" asp-controller="Benefit" class="nav-link">
-                                <span class="nav-icon fa fa-clipboard"></span> Tipos de Benefícios
-                            </a>
-                        </li>
+                    <li class="nav-item">
+                        <a asp-action="Index" asp-controller="Benefit" class="nav-link">
+                            <span class="nav-icon fa fa-clipboard"></span> Tipos de Benefícios
+                        </a>
+                    </li>
 
-                        <li class="nav-title">Estadias</li>
-                        <li class="nav-item">
-                            <a asp-action="Index" asp-controller="Stay" class="nav-link">
-                                <span class="nav-icon fa fa-hotel"></span> Estadias
-                            </a>
-                        </li>
+                    <li class="nav-title">Estadias</li>
+                    <li class="nav-item">
+                        <a asp-action="Index" asp-controller="Stay" class="nav-link">
+                            <span class="nav-icon fa fa-hotel"></span> Estadias
+                        </a>
+                    </li>
 
-                        <li class="nav-title">Informações Médicas</li>
-                        <li class="nav-item">
-                            <a asp-action="Index" asp-controller="Medicine" class="nav-link">
-                                <span class="nav-icon fa fa-capsules"></span> Remédios
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a asp-action="Index" asp-controller="CancerType" class="nav-link">
-                                <span class="nav-icon fa fa-notes-medical"></span> Cânceres
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a asp-action="Index" asp-controller="TreatmentPlace" class="nav-link">
-                                <span class="nav-icon fa fa-hospital-alt"></span> Locais de tratamento
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a asp-action="Index" asp-controller="Doctor" class="nav-link">
-                                <span class="nav-icon fa fa-user-md"></span> Médicos
-                            </a>
-                        </li>
-                    }
+                    <li class="nav-title">Informações Médicas</li>
+                    <li class="nav-item">
+                        <a asp-action="Index" asp-controller="Medicine" class="nav-link">
+                            <span class="nav-icon fa fa-capsules"></span> Remédios
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a asp-action="Index" asp-controller="CancerType" class="nav-link">
+                            <span class="nav-icon fa fa-notes-medical"></span> Cânceres
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a asp-action="Index" asp-controller="TreatmentPlace" class="nav-link">
+                            <span class="nav-icon fa fa-hospital-alt"></span> Locais de tratamento
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a asp-action="Index" asp-controller="Doctor" class="nav-link">
+                            <span class="nav-icon fa fa-user-md"></span> Médicos
+                        </a>
+                    </li>
 
                     @if (User.IsInRole(Roles.Admin))
                     {
-                        @*<li class="nav-title">Relatórios</li>
-                            <li class="nav-item">
-                            <a class="nav-link" href="#">
-                            <span class="nav-icon fa fa-file-medical"></span> Relatórios
-                            </a>
-                            </li>
-                            <li class="nav-item">
-                            <a class="nav-link" href="#">
-                            <span class="nav-icon fa fa-file-medical-alt"></span> Relatórios Pessoais
-                            </a>
-                            </li> *@
-
                         <li class="nav-title">Administrativo</li>
                         <li class="nav-item">
                             <a asp-action="Index" asp-controller="User" class="nav-link">
@@ -133,7 +118,7 @@
                         </li>
                     }
 
-                    @if (!User.IsInRole(Roles.SocialAssistance))
+                    @if (User.IsInRole(Roles.Secretary) || User.IsInRole(Roles.Admin))
                     {
                         <li class="nav-title">Camisetas</li>
                         <li class="nav-item">
